# example_cargo_deb

./: Cargo.toml  full_sql.sql
assets/: index.html
assets/style/: main.css
config/: config-file  database.template
deb_scripts/: config  postinst  postrm  prerm  service
migrations/2022-02-28-162654_init/: down.sql  up.sql
migrations/2022-03-14-162205_upgrade/: up.sql
src/: main.rs  model.rs  schema.rs
