[package]
name = "example-project"
description = "My Example Project"
version = "0.1.0"
edition = "2021"
authors = ["Tglman <tglman@tglman.com>"]
license = "Apache 2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.9.0"
log = "0.4"
serde="1.0"
serde_derive="1.0"
envy="0.4"


# Package Generation
[package.metadata.deb]
maintainer-scripts = "deb_scripts/"
conf-files = ["etc/example-project/config-file"]
assets = [
    ["assets/*","var/www/example-project/","644"],
    ["assets/style/*","var/www/example-project/style/","644"],
    ["target/release/example-project","usr/bin/example-project","744"],
    ["config/config-file","etc/example-project/config-file","644"],
]
systemd-units = {enable=true}

