[package]
name = "example-project"
description = "My Example Project"
version = "0.2.0"
edition = "2021"
authors = ["Tglman <tglman@tglman.com>"]
license = "Apache 2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.9.0"
log = "0.4"
serde="1.0"
serde_derive="1.0"
envy="0.4"
diesel = { version = "1.4", features = ["postgres","serde_json", "r2d2"] }
r2d2 = "0.8"


# Package Generation
[package.metadata.deb]
maintainer-scripts = "deb_scripts/"
conf-files = ["etc/example-project/config-file","etc/example-project/database" ]
depends = "$auto, postgresql, dbconfig-pgsql|dbconfig-no-thanks, coreutils "
assets = [
    ["assets/*","var/www/example-project/","644"],
    ["assets/style/*","var/www/example-project/style/","644"],
    ["target/release/example-project","usr/bin/example-project","744"],
    ["config/config-file","etc/example-project/config-file","644"],
    ["config/database.template","etc/example-project/database.template","644"],
    ["full_sql.sql","/usr/share/dbconfig-common/data/example-project/install/pgsql","644"],
    ["migrations/2022-03-14-162205_upgrade/up.sql","/usr/share/dbconfig-common/data/example-project/upgrade/pgsql/0.1.0","644"],
]
systemd-units = {enable=true}

